# bug-reports

django-query-race-condition/: README.md  manage.py  pyproject.toml
django-query-race-condition/app/: models.py
django-query-race-condition/app/management/commands/: repro.py
django-query-race-condition/app/migrations/: 0001_initial.py
django-query-race-condition/dqrc/: settings.py
docker-build-disk-space-leak/: Dockerfile  README.md  repro.sh
poetry-missing-deps/: Dockerfile  build.sh  pyproject.toml
supervisord-signals/: README.md  signaltest.py  supervisord.conf
