[tool.poetry]
name = "django-query-race-condition"
version = "0.1.0"
description = ""
authors = ["Marti Raudsepp <marti@juffo.org>"]
readme = "README.md"
packages = [{include = "django_query_race_condition"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
